--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,9 @@
 	line-height: 1.5;
 	font-weight: 400;
 
-	color-scheme: light dark;
+	/* color-scheme: light dark;
 	color: rgba(255, 255, 255, 0.87);
-	background-color: #242424;
+	background-color: #242424; */
 
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
@@ -21,6 +21,15 @@
 	--red-color: #ea4335;
 	--yellow-color: #fbbc04;
 	--green-color: #34a853;
+}
+
+.b-example-divider {
+	height: 2rem;
+	background-color: rgba(0, 0, 0, 0.1);
+	border: solid rgba(0, 0, 0, 0.15);
+	border-width: 1px 0;
+	box-shadow: inset 0 0.5em 1.5em rgba(0, 0, 0, 0.1),
+		inset 0 0.125em 0.5em rgba(0, 0, 0, 0.15);
 }
 
 .blue {
@@ -46,6 +55,8 @@
 
 * {
 	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
 
 html {
