--- a/src/index.css
+++ b/src/index.css
@@ -97,3 +97,112 @@ html {
 		font-family: "GoogleSans", sans-serif;
 	}
 }
+
+figure {
+	margin: 0 !important;
+	padding: 0 !important;
+	overflow: hidden;
+}
+
+/* Mission Vision Effects */
+
+/* Zoom in */
+.mission-vision figure img {
+	-webkit-transform: scale(1);
+	transform: scale(1);
+	-webkit-transition: 0.3s ease-in-out;
+	transition: 0.3s ease-in-out;
+}
+
+.mission-vision figure:hover img {
+	-webkit-transform: scale(1.3);
+	transform: scale(1.3);
+}
+
+/* Shine */
+.mission-vision figure {
+	position: relative;
+}
+
+.mission-vision figure:before {
+	position: absolute;
+	top: 0;
+	left: -75%;
+	z-index: 2;
+	display: block;
+	content: "";
+	width: 50%;
+	height: 100%;
+	background: -webkit-linear-gradient(
+		left,
+		rgba(255, 255, 255, 0) 0%,
+		rgba(255, 255, 255, 0.3) 100%
+	);
+	background: linear-gradient(
+		to right,
+		rgba(255, 255, 255, 0) 0%,
+		rgba(255, 255, 255, 0.3) 100%
+	);
+	-webkit-transform: skewX(-25deg);
+	transform: skewX(-25deg);
+}
+
+.mission-vision figure:hover::before {
+	-webkit-animation: shine 0.75s;
+	animation: shine 0.75s;
+}
+
+@-webkit-keyframes shine {
+	100% {
+		left: 125%;
+	}
+}
+
+@keyframes shine {
+	100% {
+		left: 125%;
+	}
+}
+
+/* Chapter Member Effects */
+.teams-pic figure img {
+	-webkit-transform: scale(1);
+	transform: scale(1);
+	-webkit-transition: 0.3s ease-in-out;
+	transition: 0.3s ease-in-out;
+}
+
+.teams-pic figure:hover img {
+	-webkit-transform: scale(1.3);
+	transform: scale(1.3);
+}
+
+.teams-pic figure:hover img {
+	opacity: 1;
+	-webkit-animation: flash 1.5s;
+	animation: flash 1.5s;
+}
+
+/* Teams Effects */
+
+/* Flashing */
+
+@-webkit-keyframes flash {
+	0% {
+		opacity: 0.4;
+	}
+
+	100% {
+		opacity: 1;
+	}
+}
+
+@keyframes flash {
+	0% {
+		opacity: 0.4;
+	}
+
+	100% {
+		opacity: 1;
+	}
+}
