fix(css): naming convention

--- a/src/index.css
+++ b/src/index.css
@@ -164,7 +164,7 @@ figure {
 	}
 }
 
-/* Chapter Member Effects */
+/* Team Effects */
 .teams-pic figure img {
 	-webkit-transform: scale(1);
 	transform: scale(1);
